--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}  # Секрет для облікового запису служби
-          project_id: ${{ secrets.GCP_PROJECT_ID }}  # Ваш проект GCP
+          project_id: ${{ secrets.ROJECT_ID }}  # Ваш проект GCP
           export_default_credentials: true
 
       - name: Build Docker image
@@ -40,7 +40,7 @@ jobs:
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy my-app \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.run_id }} \
+            --image ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }} \
             --platform managed \
-            --region us-central1 \
+            --region europe-west1 \
             --allow-unauthenticated
