--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           
       - name: Configure docker
         run: |
-          gcloud auth configure-docker ${{ secrets.ARTIFACT_REGISTRY }}
+          gcloud auth configure-docker europe-west1-docker.pkg.dev/my-test-db-437307/node-ar
 
       - name: Push Docker image
         run: |
@@ -43,7 +43,7 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy my-app \
+          gcloud run deploy okha \
             --image ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }} \
             --platform managed \
             --region europe-west1 \
