--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}  # Секрет для облікового запису служби
-          project_id: ${{ secrets.ROJECT_ID }}  # Ваш проект GCP
+          service_account_key: ${{ secrets.GCP_SA_KEY }} 
+          project_id: ${{ secrets.ROJECT_ID }}  
           export_default_credentials: true
 
       - name: Build Docker image
@@ -30,7 +30,7 @@ jobs:
           
       - name: Configure docker
         run: |
-          gcloud auth configure-docker europe-west1-docker.pkg.dev/my-test-db-437307/node-ar
+          gcloud auth configure-docker europe-west1-docker.pkg.dev
 
       - name: Push Docker image
         run: |
