--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.2.0
+        uses: google-github-actions/setup-gcloud@latest
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }} 
           project_id: ${{ secrets.ROJECT_ID }}  
@@ -43,12 +43,12 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy test2 \
+          gcloud run deploy okha \
             --image ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }} \
             --platform managed \
             --region europe-west1 \
             --allow-unauthenticated \
-            --project ${{ secrets.ROJECT_ID }} 
+            --project ${{ secrets.ROJECT_ID }} \
             --min-instances=1 \ 
             --max-instances=1 \ 
             --no-cpu-boost \
