--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud
+        uses: google-github-actions/setup-gcloud@v2.1.1
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }} 
           project_id: ${{ secrets.ROJECT_ID }}  
@@ -31,11 +31,9 @@ jobs:
       - name: Configure docker
         run: |
           gcloud auth configure-docker europe-west1-docker.pkg.dev
-
       - name: Push Docker image
         run: |
           docker push ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }}
-
       - name: Push Docker image
         run: |
           docker push ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:latest
@@ -43,14 +41,13 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy okha \
+          gcloud run deploy test2 \
             --image ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }} \
             --platform managed \
             --region europe-west1 \
             --allow-unauthenticated \
-            --project ${{ secrets.ROJECT_ID }} \
+            --project ${{ secrets.ROJECT_ID }} 
             --min-instances=1 \ 
             --max-instances=1 \ 
             --no-cpu-boost \
             --port=80
-            
