--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,12 +41,12 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy test2 \
+          gcloud run deploy okha \
             --image ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }} \
             --platform managed \
             --region europe-west1 \
             --allow-unauthenticated \
-            --project ${{ secrets.ROJECT_ID }} 
+            --project ${{ secrets.ROJECT_ID }} \
             --min-instances=1 \ 
             --max-instances=1 \ 
             --no-cpu-boost \
