--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }} 
-          project_id: ${{ secrets.ROJECT_ID }}  
+          project_id: ${{ secrets.PROJECT_ID }}  
           export_default_credentials: true
 
       - name: Build Docker image
@@ -46,7 +46,7 @@ jobs:
             --platform managed \
             --region europe-west1 \
             --allow-unauthenticated \
-            --project ${{ secrets.ROJECT_ID }} \
+            --project ${{ secrets.PROJECT_ID }} \
             --min-instances=1 \ 
             --max-instances=1 \ 
             --no-cpu-boost \
