--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.2.0
+        uses: google-github-actions/setup-gcloud@v1.0.1
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }} 
           project_id: ${{ secrets.PROJECT_ID }}  
@@ -47,7 +47,7 @@ jobs:
             --region europe-west1 \
             --allow-unauthenticated \
             --project ${{ secrets.PROJECT_ID }} \
-            --min-instances=1 \ 
-            --max-instances=1 \ 
-            --no-cpu-boost \
+            --min-instances=1 \
+            --max-instances=1 \
+            --no-cpu-boost
             --port=80
