--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,21 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1.0.1
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }} 
-          project_id: ${{ secrets.PROJECT_ID }}  
-          export_default_credentials: true
+          credentials_json: '${{ secrets.GCP_SA_KEY  }}'
+  
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+
+    #   - name: Set up Google Cloud SDK
+    #     uses: google-github-actions/setup-gcloud@v1.0.1
+    #     with:
+    #       service_account_key: ${{ secrets.GCP_SA_KEY }} 
+    #       project_id: ${{ secrets.PROJECT_ID }}  
+    #       export_default_credentials: true
 
       - name: Build Docker image
         run: |
