--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -22,27 +22,27 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }} .
+          docker build -t ${{ secrets.ARTIFACT_REGISTRY }}/my-app:${{ github.run_id }} .
         
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:latest .
+          docker build -t ${{ secrets.ARTIFACT_REGISTRY }}/my-app:latest .
           
       - name: Configure docker
         run: |
           gcloud auth configure-docker europe-west1-docker.pkg.dev
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }}
+          docker push ${{ secrets.ARTIFACT_REGISTRY }}/my-app:${{ github.run_id }}
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:latest
+          docker push ${{ secrets.ARTIFACT_REGISTRY }}/my-app:latest
     
 
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy okha \
-            --image ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }} \
+            --image ${{ secrets.ARTIFACT_REGISTRY }}/my-app:${{ github.run_id }} \
             --platform managed \
             --region europe-west1 \
             --allow-unauthenticated \
