--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -1,4 +1,4 @@
-name: Deploy to Cloud Run
+name: Deploy test app Cloud Run
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
       - main  
 
 jobs:
-  build-and-deploy:
+  build-and-deploy-to-test-env:
     runs-on: ubuntu-latest
 
     steps:
@@ -41,7 +41,7 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy test-okha \
+          gcloud run deploy ${{ github.head_ref }} \
             --image ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }} \
             --platform managed \
             --region europe-west1 \
