--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy ${{ github.head_ref }} \
+          gcloud run deploy test-${{ github.head_ref }} \
             --image ${{ secrets.ARTIFACT_REGISTRY }}/test-my-app:${{ github.run_id }} \
             --platform managed \
             --region europe-west1 \
